= 3.6.18
- Add references only for column.search_joins which are in column.includes, and do search_joins for the rest, search_joins default to includes, so won't change behaviour on most cases, but allows to preload some associations without joining in the query
- Don't define default search_joins, as it may return includes, so search_joins will default to includes unless is defined, and the previous change won't change the behaviour if user doesn't define search_joins
- Fix update_columns on through association

= 3.6.17
- Don't add includes or left joins for constrained columns, as they are ignored on sorting clause
- Fix deprecation on cache counts with rails 5, and fix the queries for rails >= 5.1
- Fix new for tableless models on rails 5.0

= 3.6.16
- Fix query on paper_trail action
- Fix one? on tableless relation
- Fix exists? on tableless relation
- Fix getting conditions from association in the tableless relation

= 3.6.15
- Prevent firing 2 change events on jquery datetime pickers
- Fix setting data options on columns for date and datetime pickers

= 3.6.14
- Fix setting data on html_options when threadsafe is enabled
- Fill nested association on render field, as done in new action

= 3.6.13
- Fix link caching on action when threadsafe is enabled

= 3.6.12
- Fix getting proxy for action link when iterating over action links and threadsafe is enabled, so link can be changed

= 3.6.11.1
- Fix required attribute broken on previous version when no validation was found

= 3.6.11
- Fix inplace edit cloning with jquery >= 1.9, when more than one child is cloned
- Support inplace edit cloning for :radio form_ui
- Add records parameter to cache_columns_count and related methods (count_query_for_column, mongoid_count_for_column)
- Fix required attribute when validator uses :on option, so on: :update only set required on update form, and :create only set required on create form

= 3.6.10
- Don't add numerical constraints based on conditional validation